[package]
name = "nori"
version = "0.1.0"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
edition = "2018"

[dependencies]
osrmreader = "0.1"
rand = "0.7"
reqwest = {version = "0.10", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = "2.33"
