[package]
name = "nori"
version = "0.1.0"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/b-r-u/nori"
homepage = "https://github.com/b-r-u/nori"
description = """
Estimate average daily traffic on a road network by sampling a distribution of shortest paths.
"""
categories = ["science"]
keywords = ["traffic", "road", "osrm", "openstreetmap"]
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3"
clap = "2.33"
csv = "1.1"
geomatic = "0.1"
kdtree = "0.6.0"
osrmreader = "0.1"
palette = { version = "0.5", features = ["std"], default-features = false }
rand = "0.7"
reqwest = {version = "0.10", features = ["blocking"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raqote = { version = "0.8", default-features = false }
